--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,35 @@ button {
   cursor: pointer;
   background-color: blue;
 }
+
+form {
+  width: 40%;
+  padding: 50px;
+  margin-left: 30%;
+  margin-top: 2%;
+  align-content: center;
+  border-style: dotted;
+  border: 5px solid rgb(20, 18, 20);
+  border-radius: 25px;
+  text-align: center;
+}
+
+.title{
+  font-family: "Lucida Console", "Courier New", monospace;
+  text-align: center;
+  font-size:40px;
+  margin-left: 100px;
+  
+}
+
+.title_div{
+  height: 15%;
+  width: 45%;
+  margin-left: 30%;
+  color: #006633;
+  text-align: center;
+  font-family: "Sofia", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+
+}
