--- a/src/App.css
+++ b/src/App.css
@@ -1,79 +1,19 @@
-.App {
-  text-align: center;
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Home,
+.Contact,
+.Spotify {
   display: flex;
-  flex-direction: column;
+  height: 90vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  background-color: blue;
-}
-
-form {
-  width: 40%;
-  padding: 50px;
-  margin-left: 30%;
-  margin-top: 2%;
-  align-content: center;
-  border-style: dotted;
-  border: 5px solid rgb(20, 18, 20);
-  border-radius: 25px;
-  text-align: center;
-}
-
-.title{
-  font-family: "Lucida Console", "Courier New", monospace;
-  text-align: center;
-  font-size:40px;
-  margin-left: 100px;
-  
-}
-
-.title_div{
-  height: 15%;
-  width: 45%;
-  margin-left: 30%;
-  color: #006633;
-  text-align: center;
-  font-family: "Sofia", sans-serif;
-  font-weight: bold;
-  font-style: italic;
-
+  font-size: 3rem;
 }
